update python finish

--- a/unit-1/Python.ipynb
+++ b/unit-1/Python.ipynb
@@ -527,12 +527,819 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ffedce-0a08-4cf7-9a3b-470851369434",
+   "cell_type": "markdown",
+   "id": "f1a5dceb-9435-48e0-9383-36a933c403ac",
    "metadata": {},
+   "source": [
+    "### Numeric operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "5c99efce-1c30-44fc-a8d3-530a040dc492",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6.0\n",
+      "7.0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Math\n",
+    "suma = 1+3\n",
+    "división = 12/2\n",
+    "print(suma, división)\n",
+    "\n",
+    "# Exponent\n",
+    "print(49**0.5)\n",
+    "\n",
+    "#Reminder (resto)\n",
+    "print(12%5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "7ba53e4d-7bd7-48db-b9a3-d1f6b72e9651",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.3\n",
+      "4\n",
+      "58.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [4, 10, 8, 18, 18.3]\n",
+    "\n",
+    "print(max(numeros))\n",
+    "print(min(numeros))\n",
+    "print(sum(numeros))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "08c74d33-cb77-4a61-8df8-96cc7fd34eb3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3333333333333335\n",
+      "2.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "decimal = 7/3\n",
+    "print(decimal)\n",
+    "print(round(decimal, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79470365-b107-4086-89de-e6892821f095",
+   "metadata": {},
+   "source": [
+    "### String operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "50d29786-4f1e-448a-9f00-5d6875d62d86",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "<class 'int'> <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Interger to string\n",
+    "num_1, num_2 = 3, 4.8\n",
+    "print(num_1)\n",
+    "print(type(num_1), type(num_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "0f94d38c-6989-4a2d-a819-26c22b2a6717",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convertir números en string\n",
+    "num_1 = str(num_1)\n",
+    "print(num_1)\n",
+    "print(type(num_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "bdd6cb9e-bf6e-44ff-8a5d-6fe7914a51f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# String length\n",
+    "var = \"Chookity pok\"\n",
+    "len(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "7d2ec228-be12-4786-be58-1cf3c67f2e99",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The symbol is: \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Escape characters\n",
+    "message = \"The symbol is: \\\"\"\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "c54b1970-6a80-4e7d-827a-74975bf0f61d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "HELLO WORLD\n",
+      "hello world\n",
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upper, lower and title cases\n",
+    "message = \"Hello world\"\n",
+    "print(message)\n",
+    "\n",
+    "# Upper\n",
+    "message_upper = message.upper()\n",
+    "print(message_upper)\n",
+    "\n",
+    "# Lower\n",
+    "message_lower = message.lower()\n",
+    "print(message_lower)\n",
+    "\n",
+    "# Title\n",
+    "message_title = message.title()\n",
+    "print(message_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "dbf46b71-e273-4a36-adbe-0514bfe7a322",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a string\n",
+      "['t', 'h', 'i', 's', ' ', 'i', 's', ' ', 'a', ' ', 's', 't', 'r', 'i', 'n', 'g']\n",
+      "['this', 'is', 'a', 'string']\n",
+      "['thi', ' i', ' a ', 'tring']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String to list\n",
+    "message = \"this is a string\"\n",
+    "message_letters = list(message)\n",
+    "\n",
+    "# Por defecto split corta por los espacios\n",
+    "message_words = message.split()\n",
+    "message_splitted = message.split(\"s\")\n",
+    "print(message)\n",
+    "print(message_letters)\n",
+    "print(message_words)\n",
+    "print(message_splitted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "8d542916-7d7e-41f6-b83c-199fe7e6a762",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['melocotón', 'nectarina', 'fresa']\n",
+      "melocotón nectarina fresa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List to string\n",
+    "fruits = [\"melocotón\", \"nectarina\", \"fresa\"]\n",
+    "print(fruits)\n",
+    "\n",
+    "# Dentro de las comillas introduzco el símbolo de separación de la lista\n",
+    "fruits_joined = \" \".join(fruits)\n",
+    "print(fruits_joined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "f87a0ea1-3887-4efd-8292-c057e8c9401a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Ro\n",
+      "age: 27\n",
+      "name: Ro\n",
+      "age: 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "# New line and tabulator\n",
+    "multi_line = \"name: Ro\\nage: 27\"\n",
+    "print(multi_line)\n",
+    "\n",
+    "# Multiline string\n",
+    "multi_line_string = \"\"\"name: Ro\n",
+    "age: 27\"\"\"\n",
+    "\n",
+    "print(multi_line_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "34440cbf-8adf-484e-85d5-c24f4160769c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Introduce un caracter:  is\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check substring\n",
+    "var = \"My DNI is: 53812079Z\"\n",
+    "\n",
+    "# Aquí abajo\n",
+    "letra = input(\"Introduce un caracter: \")\n",
+    "\n",
+    "# Code\n",
+    "check = letra in var\n",
+    "print(check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "1222371c-73dc-4edb-9b2f-9f947cc5fd53",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word: hello\n",
+      "word_5: hellohellohellohellohello\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multistring\n",
+    "word = \"hello\"\n",
+    "word_5 = word*5\n",
+    "\n",
+    "# Print\n",
+    "message = f\"word: {word}\\nword_5: {word_5}\"\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "cafe98e5-7163-466f-a432-356585ff8ada",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thiz iz a ztring\n",
+      "this is a string\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace string\n",
+    "message = \"thiz iz a ztring\"\n",
+    "print(message)\n",
+    "\n",
+    "# Renombro la nueva variable con el código usado\n",
+    "message = message.replace(\"z\", \"s\")\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7aa1f91-fa37-496e-aa11-e778b4e350dc",
+   "metadata": {},
+   "source": [
+    "### List operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "8c0fd3be-3bce-420c-9b9a-1be57243dec2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# List of planets\n",
+    "planets = [\"Mercury\", \"Venus\", \"Earth\", \"Mars\", \"Jupiter\", \"Saturn\", \"Uranus\", \"Neptune\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "884a95de-8cf8-4b08-abab-39599eed35f8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earth\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sacar elemento de una lista (de alguna forma empieza en 0)\n",
+    "planet = planets[2]\n",
+    "print(planet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "f0688a58-45d4-4196-aa42-9f2eca5785bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uranus\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sacar penúltimo elemento\n",
+    "planet = planets[-2]\n",
+    "print(planet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "9965b592-d2c7-493c-b70d-7b1fd693ce79",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune', 'pluto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Añadir elementos a la lista\n",
+    "new_planets = planets.copy()\n",
+    "new_planets.append(\"pluto\")\n",
+    "print(new_planets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "d47b4309-8148-4597-8ac1-ea4102882915",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Earth', 'Mars', 'Jupiter']"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Slicing a list (el último no lo cuenta)\n",
+    "planets[2:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "66ccf80c-3015-4d08-9648-d024b5e18e35",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Earth', 'Jupiter', 'Mars', 'Mercury', 'Neptune', 'Saturn', 'Uranus', 'Venus']"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Order list\n",
+    "sorted(planets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "a0038e90-fad2-40cb-8535-2e1a26fe6b12",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18]"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Range to list\n",
+    "list(range(20))\n",
+    "\n",
+    "#Añadir un step para que salte\n",
+    "list(range(2,20,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "cf347674-7408-49d1-abf6-dd8c9c1cf48a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count items\n",
+    "planets.count(\"Earth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97ba4565-bf45-4ce7-b985-f812ec6bce4d",
+   "metadata": {},
+   "source": [
+    "### Diccionarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "8d6b4639-cc15-4c75-9f70-0e5325e97fcd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "market_value = {\n",
+    "    \"Apple\": 2345.67,\n",
+    "    \"Microsoft\": 1765.89,\n",
+    "    \"Amazon\": 3012.45,\n",
+    "    \"Google\": 2789.34,\n",
+    "    \"Facebook\": 1890.56\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "940c99f6-f1b6-4a43-a2fc-b5b4d0cda4d2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Apple': 2345.67, 'Microsoft': 1765.89, 'Amazon': 3012.45, 'Google': 2789.34, 'Facebook': 1890.56, 'Tesla': 1899.32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a key to dictionary\n",
+    "market_value[\"Tesla\"] = 1899.32\n",
+    "print(market_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "8cc7e379-2a06-41fd-b5e0-fd4e4f4bf65c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Apple': 2345.67, 'Microsoft': 1765.89, 'Amazon': 3012.45, 'Google': 2789.34, 'Facebook': 1890.56, 'Tesla': 1899.32, 'Netflix': 2156.0, 'Adobe': 1654.32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add multiple keys to dictionary\n",
+    "market_value.update({\"Netflix\": 2156., \"Adobe\": 1654.32})\n",
+    "print(market_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "5d81a749-b567-4d82-9dcd-fde78793acd1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Apple': 1500.0, 'Microsoft': 1765.89, 'Amazon': 3012.45, 'Google': 2789.34, 'Facebook': 1890.56, 'Tesla': 1899.32, 'Netflix': 2156.0, 'Adobe': 1654.32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Overwrite a value\n",
+    "market_value[\"Apple\"] = 1500.\n",
+    "print(market_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "051e7860-a183-42ab-8c24-9a34ef7eea86",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2789.34"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract a value\n",
+    "market_value[\"Google\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "03a7d7ac-b269-4d7b-bac7-28bb5af345ea",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys view: dict_keys(['Apple', 'Microsoft', 'Amazon', 'Google', 'Facebook', 'Tesla', 'Netflix', 'Adobe'])\n",
+      "Values view: dict_values([1500.0, 1765.89, 3012.45, 2789.34, 1890.56, 1899.32, 2156.0, 1654.32])\n",
+      "Items view: dict_items([('Apple', 1500.0), ('Microsoft', 1765.89), ('Amazon', 3012.45), ('Google', 2789.34), ('Facebook', 1890.56), ('Tesla', 1899.32), ('Netflix', 2156.0), ('Adobe', 1654.32)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using .keys() to get a view of keys\n",
+    "keys_view = market_value.keys()\n",
+    "\n",
+    "# Using .values() to get a view of values\n",
+    "values_view = market_value.values()\n",
+    "\n",
+    "# Using .items() to get a view of (key, value) pairs\n",
+    "items_view = market_value.items()\n",
+    "\n",
+    "# Print the views\n",
+    "print(\"Keys view:\", keys_view)\n",
+    "print(\"Values view:\", values_view)\n",
+    "print(\"Items view:\", items_view)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f24904-d47c-46e1-b6ef-0396c3be9005",
+   "metadata": {},
+   "source": [
+    "### If, Else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "9ab466e7-af2a-42c3-9270-a711151bf3ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is negative.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = -50\n",
+    "\n",
+    "# Check the number and provide a corresponding message\n",
+    "if number > 0:\n",
+    "    print(\"The number is positive.\")\n",
+    "elif number < 0:\n",
+    "    print(\"The number is negative.\")\n",
+    "else:\n",
+    "    print(\"The number is zero.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c3d052d-7d24-4cf4-81ba-953605cbabc1",
+   "metadata": {},
+   "source": [
+    "### Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "4ff767ae-079c-4cf6-8743-75b53c03049a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MERCURY', 'VENUS', 'EARTH', 'MARS', 'JUPITER', 'SATURN', 'URANUS', 'NEPTUNE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For loop\n",
+    "planets_upper = []\n",
+    "for planet in planets:\n",
+    "    planet_upper = planet.upper()\n",
+    "    planets_upper.append(planet_upper)\n",
+    "\n",
+    "print(planets_upper)"
+   ]
   }
  ],
  "metadata": {
